# Moo

./: .gitignore  Cargo.toml  index.html
.github/: pull_request_template.md
docs/: CONCEPTS.md  REFERENCES.md  TODO.md  task.md
khe/: Cargo.toml
khe/src/: backend.rs  lib.rs  main.rs  renderer.rs  window.rs
khe/src/shaders/: lines.wgsl  particles.wgsl  refraction.wgsl  ui.wgsl
moo/: Cargo.toml  build.rs
moo/proto/: control.proto
moo/src/: control.rs  lib.rs  main.rs  python.rs  server.rs  simulation.rs  ui.rs
moo/src/core/geometry/: euclidean.rs  manifold.rs  mod.rs  so3.rs
moo/src/core/math/: ad.rs  mod.rs
moo/src/core/solve/: constraints.rs  mod.rs
moo/src/core/state/: mod.rs
moo/src/engine/: audio.rs  core.rs  mod.rs  platform.rs  renderer.rs  resources.rs  scene.rs
moo/src/games/: mod.rs
moo/src/games/sandbox/: mod.rs  start_window.rs  states.rs
moo/src/investigation/probe/: mod.rs
moo/src/investigation/viz/: renderer.rs  window.rs
moo/src/investigation/viz/shaders/: particles.wgsl
moo/src/laws/classical/: gravity.rs  mod.rs  spring.rs
moo/src/laws/continuum/: mod.rs  sph.rs
moo/src/laws/registry/: mod.rs
moo/src/platform/: mod.rs
moo/src/platform/compute/: grid.wgsl  mod.rs  nbody.wgsl  sort.wgsl  sph.wgsl
moo/tests/: energy_conservation.rs  fluid_drop.rs  orbits.rs  rigid_body_rotation.rs
src/: main.rs
src/engine/: mod.rs  renderer.rs
src/game/: enemy.rs  mod.rs  player.rs
