[package]
name = "moo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
winit = "0.29"
wgpu = "0.19"
rodio = "0.17"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
