[package]
name = "khe"
version = "0.0.4"
edition = "2024"

[dependencies]
moo = { path = "../moo" }
winit = { version = "0.30", features = ["rwh_06"] }
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"
pollster = "0.4"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
