[package]
name = "khe"
version = "0.0.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
moo = { path = "../moo" }
winit = { version = "0.30", features = ["rwh_06"] }
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"
pollster = "0.4"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
image = "0.25.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom = { version = "0.2", features = ["js"] }
