[package]
name = "moo"
version = "0.0.3"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.19"
rodio = "0.17"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.25"


