[package]
name = "moo"
version = "0.0.4"
edition = "2024"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
winit = { version = "0.30", features = ["rwh_06"] } # rwh_05 usually updated to 06
wgpu = "27"
rodio = "0.21"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"


